--- a/style.css
+++ b/style.css
@@ -9,7 +9,6 @@
     margin: 0;
     font-family: 'poppins';
     box-sizing: border-box;
-    font-size: 10px!important;
 }
 
 
@@ -324,4 +323,7 @@
 }
 .foot{
   height:40vh!important ;
+}
+*{
+     font-size: 16px!important;
 }
