--- a/style.css
+++ b/style.css
@@ -9,6 +9,7 @@
     margin: 0;
     font-family: 'poppins';
     box-sizing: border-box;
+     font-size: 16px!important;
 }
 
 
@@ -29,6 +30,7 @@
   body{
      width: 100% ;
      height: 100vh;
+       font-size: 16px!important;
   }
   .card {
     display: inline-block;
