--- a/style.css
+++ b/style.css
@@ -1,331 +1,344 @@
 :root {
-    --primary: #1363C6;
-    --secondary: #15ACE1;
-    --light: #F4F7FE;
-    --dark: #14183E;
+  --primary: #1363C6;
+  --secondary: #15ACE1;
+  --light: #F4F7FE;
+  --dark: #14183E;
 }
 *{ 
-    padding: 0;
-    margin: 0;
-    font-family: 'poppins';
-    box-sizing: border-box;
-     font-size: 16px!important;
+  padding: 0;
+  margin: 0;
+  font-family: 'poppins';
+  box-sizing: border-box;
+ 
 }
 
 
 .nav-link{
-    font-size: 16px;
+  font-size: 16px;
 }
-/* ---- reset ---- */ body{ margin:0; font:normal 75% Arial, Helvetica, sans-serif; } canvas{ display: block; vertical-align: bottom; } /* ---- particles.js container ---- */ #particles-js{ position:absolute; width: 100%; height: 100%;     background-color: var(--bs-body-bg); background-image: url(""); background-repeat: no-repeat; background-size: cover; background-position: 50% 50%; } /* ---- stats.js ---- */ .count-particles{ background: #000022; position: absolute; top: 48px; left: 0; width: 80px; color: #13E8E9; font-size: .8em; text-align: left; text-indent: 4px; line-height: 14px; padding-bottom: 2px; font-family: Helvetica, Arial, sans-serif; font-weight: bold; } .js-count-particles{ font-size: 1.1em; } #stats, .count-particles{ -webkit-user-select: none; margin-top: 5px; margin-left: 5px; } #stats{ border-radius: 3px 3px 0 0; overflow: hidden; } .count-particles{ border-radius: 0 0 3px 3px; }
-.photo{
-    display: inline-block;
-    margin: 0 0.5rem;
-  
-    animation:animate__fadeInUp  ; /* referring directly to the animation's @keyframe declaration */
-    animation-duration: 12s; 
-     
 
-    /* don't forget to set a duration! */
-  }
-  body{
-     width: 100% ;
-     height: 100vh;
-       font-size: 16px!important;
-  }
-  .card {
-    display: inline-block;
-    margin: 0 0.5rem;
+.photo{
+  display: inline-block;
+  margin: 0 0.5rem;
+
+  animation:animate__fadeInUp  ; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 12s; 
+   
+
+  /* don't forget to set a duration! */
+}
+body{
+   width: 100% ;
+   height: 100vh;
   
-    animation: bounce; /* referring directly to the animation's @keyframe declaration */
-    animation-duration: 2s; /* don't forget to set a duration! */
-  }
+}
+.card {
+  display: inline-block;
+  margin: 0 0.5rem;
+
+  animation: bounce; /* referring directly to the animation's @keyframe declaration */
+  animation-duration: 2s; /* don't forget to set a duration! */
+}
 
 
 .hvr-grow:hover,
 .hvr-grow:focus,
 .hvr-grow:active {
-    transform: scale(1.1);
+  transform: scale(1.1);
 }
 
 
-  .card {
-    display: inline-block;
-    vertical-align: middle;
-    -webkit-transform: perspective(1px) translateZ(0);
-    transform: perspective(1px) translateZ(0);
-    box-shadow: 0 0 150px #b8468193;
-    -webkit-transition-duration: 0.3s;
-    transition-duration: 0.3s;
-    -webkit-transition-property: box-shadow;
-    transition-property: box-shadow;
-  }
-  .card:hover, .card:focus, .card:active {
-    box-shadow: 0 0 8px ;
-  }
-
-@media (  max-width: 1000px) {
-   .Artifcial_div{
-       margin-top:500px;
-       z-index: -22225;
-   }
-  
-}
-@media (min-width: 992px) {
-  .navbar .nav-item .dropdown-menu {
-      display: block;
-      border: none;
-      margin-top: 0;
-      top: 150%;
-      opacity: 0;
-      visibility: hidden;
-      transition: .5s;
-  }
-
-  .navbar .nav-item:hover .dropdown-menu {
-      top: 100%;
-      visibility: visible;
-      transition: .5s;
-      opacity: 1;
-  }
-}
-.input-group input.form-control:focus {
-  box-shadow: 0 0 18px #e83283;
-}
-
-
-.hvr-shutter-in-vertical {
+.card {
   display: inline-block;
   vertical-align: middle;
   -webkit-transform: perspective(1px) translateZ(0);
   transform: perspective(1px) translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  position: relative;
-  background: rgba(255, 255, 255, 0.2);
-  -webkit-transition-property: color;
-  transition-property: color;
+  box-shadow: 0 0 150px #b8468193;
   -webkit-transition-duration: 0.3s;
   transition-duration: 0.3s;
+  -webkit-transition-property: box-shadow;
+  transition-property: box-shadow;
+}
+.card:hover, .card:focus, .card:active {
+  box-shadow: 0 0 8px ;
+}
+
+@media (  max-width: 1000px) {
+ .Artifcial_div{
+     margin-top:500px;
+     z-index: -22225;
+ }
+
+}
+@media (min-width: 992px) {
+.navbar .nav-item .dropdown-menu {
+    display: block;
+    border: none;
+    margin-top: 0;
+    top: 150%;
+    opacity: 0;
+    visibility: hidden;
+    transition: .5s;
+}
+
+.navbar .nav-item:hover .dropdown-menu {
+    top: 100%;
+    visibility: visible;
+    transition: .5s;
+    opacity: 1;
+}
+}
+.input-group input.form-control:focus {
+box-shadow: 0 0 18px #e83283;
+}
+
+
+.hvr-shutter-in-vertical {
+display: inline-block;
+vertical-align: middle;
+-webkit-transform: perspective(1px) translateZ(0);
+transform: perspective(1px) translateZ(0);
+box-shadow: 0 0 1px rgba(0, 0, 0, 0);
+position: relative;
+background: rgba(255, 255, 255, 0.2);
+-webkit-transition-property: color;
+transition-property: color;
+-webkit-transition-duration: 0.3s;
+transition-duration: 0.3s;
 }
 .hvr-shutter-in-vertical:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  top: 0;
-  bottom: 0;
-  left: 0;
-  right: 0;
-  background: rgba(255, 255, 255, 0.2);
-  -webkit-transform: scaleY(1);
-  transform: scaleY(1);
-  -webkit-transform-origin: 50%;
-  transform-origin: 50%;
-  -webkit-transition-property: transform;
-  transition-property: transform;
-  -webkit-transition-duration: 0.3s;
-  transition-duration: 0.3s;
-  -webkit-transition-timing-function: ease-out;
-  transition-timing-function: ease-out;
+content: "";
+position: absolute;
+z-index: -1;
+top: 0;
+bottom: 0;
+left: 0;
+right: 0;
+background: rgba(255, 255, 255, 0.2);
+-webkit-transform: scaleY(1);
+transform: scaleY(1);
+-webkit-transform-origin: 50%;
+transform-origin: 50%;
+-webkit-transition-property: transform;
+transition-property: transform;
+-webkit-transition-duration: 0.3s;
+transition-duration: 0.3s;
+-webkit-transition-timing-function: ease-out;
+transition-timing-function: ease-out;
 }
 .hvr-shutter-in-vertical:hover, .hvr-shutter-in-vertical:focus, .hvr-shutter-in-vertical:active {
-  color: white;
+color: white;
 }
 .hvr-shutter-in-vertical:hover:before, .hvr-shutter-in-vertical:focus:before, .hvr-shutter-in-vertical:active:before {
-  -webkit-transform: scaleY(0);
-  transform: scaleY(0);
+-webkit-transform: scaleY(0);
+transform: scaleY(0);
 }
 
 .nft{
-  user-select:none;
-  max-width: 100%!important;
-  margin: 0.5rem 1px ;
-  border: 1px solid #ffffff22;
-  background-color: #282c34;
-  background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%);
-  box-shadow: 0 7px 20px 5px #00000088;
-  border-radius: .7rem;
-  backdrop-filter: blur(7px);
-  -webkit-backdrop-filter: blur(7px);
-  overflow: hidden;
-  transition: .5s all;
-  height: 350px;
-  hr{
-    width: 100%;
-    border: none;
-    border-bottom: 1px solid #88888855;
-    margin-top: 0;
+user-select:none;
+max-width: 100%!important;
+margin: 0.5rem 1px ;
+border: 1px solid #ffffff22;
+background-color: #282c34;
+background: linear-gradient(0deg, rgba(40,44,52,1) 0%, rgba(17,0,32,.5) 100%);
+box-shadow: 0 7px 20px 5px #00000088;
+border-radius: .7rem;
+backdrop-filter: blur(7px);
+-webkit-backdrop-filter: blur(7px);
+overflow: hidden;
+transition: .5s all;
+height: 350px;
+hr{
+  width: 100%;
+  border: none;
+  border-bottom: 1px solid #88888855;
+  margin-top: 0;
+}
+ins{
+  text-decoration: none;
+}
+.main{
+  display: flex;
+  flex-direction: column;
+  width: 90%;
+  padding: 1rem;
+
+  .description{
+    margin: .5rem 0;
+    color: #a89ec9;
   }
-  ins{
-    text-decoration: none;
-  }
-  .main{
+  .tokenInfo{
     display: flex;
-    flex-direction: column;
-    width: 90%;
-    padding: 1rem;
-  
-    .description{
-      margin: .5rem 0;
-      color: #a89ec9;
-    }
-    .tokenInfo{
-      display: flex;
-      justify-content: space-between;
-      align-items: center;
-      .price{
-        display: flex;
-        align-items: center;
-        color: #ee83e5;
-        font-weight: 700;
-        ins{
-          margin-left: -.3rem;
-          margin-right: .5rem;
-        }
-      }
-      .duration{
-        display: flex;
-        align-items: center;
-        color: #a89ec9;
-        margin-right: .2rem;
-        ins{
-          margin: .5rem;
-          margin-bottom: .4rem;
-        }
-      }
-    }
-    .creator{
+    justify-content: space-between;
+    align-items: center;
+    .price{
       display: flex;
       align-items: center;
-      margin-top: .2rem;
-      margin-bottom: -.3rem;
+      color: #ee83e5;
+      font-weight: 700;
       ins{
-        color: #a89ec9;
-        text-decoration: none;
-      }
-      .wrapper{
-        display: flex;
-        align-items: center;
-        border: 1px solid #ffffff22;
-        padding: .3rem;
-        margin: 0;
+        margin-left: -.3rem;
         margin-right: .5rem;
-        border-radius: 100%;
-        box-shadow: inset 0 0 0 4px #000000aa;
-        img{
-          border-radius: 100%;
-          border: 1px solid #ffffff22;
-          width: 2rem;
-          height: 2rem;
-          object-fit: cover;
-          margin: 0;
-        }
+      }
+    }
+    .duration{
+      display: flex;
+      align-items: center;
+      color: #a89ec9;
+      margin-right: .2rem;
+      ins{
+        margin: .5rem;
+        margin-bottom: .4rem;
       }
     }
   }
-  ::before{
-    position: fixed;
-    content: "";
-    box-shadow: 0 0 100px 40px #ffffff08;
-    top: -10%;
-    left: -100%;
-    transform: rotate(-45deg);
-    height: 60rem;
-    transition: .7s all;
-  }
-  &:hover{
-    border: 1px solid #ffffff44;
-    box-shadow: 0 7px 50px 10px #000000aa;
-    transform: scale(1.015);
-    filter: brightness(1.3);
-    ::before{
-      filter: brightness(.5);
-      top: -100%;
-      left: 200%;
+  .creator{
+    display: flex;
+    align-items: center;
+    margin-top: .2rem;
+    margin-bottom: -.3rem;
+    ins{
+      color: #a89ec9;
+      text-decoration: none;
+    }
+    .wrapper{
+      display: flex;
+      align-items: center;
+      border: 1px solid #ffffff22;
+      padding: .3rem;
+      margin: 0;
+      margin-right: .5rem;
+      border-radius: 100%;
+      box-shadow: inset 0 0 0 4px #000000aa;
+      img{
+        border-radius: 100%;
+        border: 1px solid #ffffff22;
+        width: 2rem;
+        height: 2rem;
+        object-fit: cover;
+        margin: 0;
+      }
     }
   }
 }
+::before{
+  position: fixed;
+  content: "";
+  box-shadow: 0 0 100px 40px #ffffff08;
+  top: -10%;
+  left: -100%;
+  transform: rotate(-45deg);
+  height: 60rem;
+  transition: .7s all;
+}
+&:hover{
+  border: 1px solid #ffffff44;
+  box-shadow: 0 7px 50px 10px #000000aa;
+  transform: scale(1.015);
+  filter: brightness(1.3);
+  ::before{
+    filter: brightness(.5);
+    top: -100%;
+    left: 200%;
+  }
+}
+}
 .link-body-emphasis{
-  color: #41294b!important;
+color: #41294b!important;
 
 }
 
 /*** Footer ***/
 .footer {
-  background: url(footer.png) center center no-repeat;
-  background-size: contain;
+background: url(footer.png) center center no-repeat;
+background-size: contain;
 }
 
 .footer .btn.btn-social {
-  margin-right: 5px;
-  width: 40px;
-  height: 40px;
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  color: rgba(255,255,255,.5);
-  border: 1px solid rgba(256, 256, 256, .1);
-  border-radius: 40px;
-  transition: .3s;
+margin-right: 5px;
+width: 40px;
+height: 40px;
+display: flex;
+align-items: center;
+justify-content: center;
+color: rgba(255,255,255,.5);
+border: 1px solid rgba(256, 256, 256, .1);
+border-radius: 40px;
+transition: .3s;
+
 }
 
 .footer .btn.btn-social:hover {
-  color: var(--primary);
+color: var(--primary);
 }
 
 .footer .btn.btn-link {
-  display: block;
-  margin-bottom: 10px;
-  padding: 0;
-  text-align: left;
-  color: rgba(255,255,255,.5);
-  font-weight: normal;
-  transition: .3s;
+display: block;
+margin-bottom: 10px;
+padding: 0;
+text-align: left;
+color: rgba(255,255,255,.5);
+font-weight: normal;
+transition: .3s;
 }
 
 .footer .btn.btn-link:hover {
-  color: #FFFFFF;
+color: #FFFFFF;
 }
 
 .footer .btn.btn-link::before {
-  position: relative;
-  content: "\f105";
-  font-family: "Font Awesome 5 Free";
-  font-weight: 900;
-  margin-right: 10px;
+position: relative;
+content: "\f105";
+font-family: "Font Awesome 5 Free";
+font-weight: 900;
+margin-right: 10px;
 }
 
 .footer .btn.btn-link:hover {
-  letter-spacing: 1px;
-  box-shadow: none;
+letter-spacing: 1px;
+box-shadow: none;
 }
 
 .footer .copyright {
-  padding: 25px 0;
-  font-size: 14px;
-  border-top: 1px solid rgba(256, 256, 256, .1);
+padding: 25px 0;
+font-size: 14px;
+border-top: 1px solid rgba(256, 256, 256, .1);
 }
 
 .footer .copyright a {
-  color: rgba(255,255,255,.5);
+color: rgba(255,255,255,.5);
 }
 
 .footer .copyright a:hover {
-  color: #FFFFFF;
+color: #FFFFFF;
 }
 
 .footer .footer-menu a {
-  margin-right: 15px;
-  padding-right: 15px;
-  border-right: 1px solid #3a2b4b07;
+margin-right: 15px;
+padding-right: 15px;
+border-right: 1px solid #3a2b4b07;
 }
 
 .footer .footer-menu a:last-child {
-  margin-right: 0;
-  padding-right: 0;
-  border-right: none;
+margin-right: 0;
+padding-right: 0;
+border-right: none;
 }
 .foot{
-  height:40vh!important ;
+height:40vh!important ;
 }
-*{
-     font-size: 16px!important;
+
+.card,.card-body {
+  max-height: 350px; 
+ 
+}
+.card-text{
+  font-size: 12px!important;
+}
+.card-title{
+  font-size: 16px;
+}
+
+.footer *,.navbar * {
+  font-size: 14px !important; /* change this value to your desired size */
 }
